# dg1022-cli

./: README.md  pyproject.toml
dg1022_cli/: cli.py
docs/: validation.md
skills/dg1022-cli/: SKILL.md
tests/: test_cli.py
tools/: live_acceptance.py
validation/: dg-advanced.json  ds-core.json  ds-triggers-math.json  levels-shapes.json  robustness.json  waveforms.json
