[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dg1022-cli"
version = "0.1.0"
description = "Dependency-free command-line control for the RIGOL DG1022"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
dg1022 = "dg1022_cli.cli:main"

[tool.setuptools]
packages = ["dg1022_cli"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]
